src_osx/y.output
Terminals which are not used

   CREATE
   LOAD
   DROP


Grammar

    0 $accept: initial_expression $end

    1 initial_expression: BGN body END

    2 body: body elem
    3     | elem

    4 elem: Inline_declaration_type ';'
    5     | time query time
    6     | atribuition_function ';'
    7     | function ';'

    8 Inline_declaration_type: VECTOR IDENTIFIER
    9                        | MATRIX IDENTIFIER
   10                        | BITMAP IDENTIFIER

   11 query: query atribuition_function ';'
   12      | query atribuition_expression ';'
   13      | atribuition_function ';'
   14      | atribuition_expression ';'

   15 time: START
   16     | STOP

   17 atribuition_function: IDENTIFIER '=' function

   18 atribuition_expression: IDENTIFIER '=' expression

   19 expression: IDENTIFIER '*' IDENTIFIER
   20           | IDENTIFIER HADAMARD IDENTIFIER
   21           | IDENTIFIER KRON IDENTIFIER
   22           | IDENTIFIER KRAO IDENTIFIER
   23           | IDENTIFIER TR
   24           | '(' expression ')'

   25 function: TBL_READ '(' IDENTIFIER ',' INTEGER ')'
   26         | TBL_WRITE '(' IDENTIFIER ',' IDENTIFIER ')'
   27         | MX_FILTER_AND '(' IDENTIFIER ',' CONDITION ',' KEY_CONDITION ',' CONDITION ',' KEY_CONDITION ')'
   28         | BANG '(' INTEGER ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 24 25 26 27 28
')' (41) 24 25 26 27 28
'*' (42) 19
',' (44) 25 26 27
';' (59) 4 6 7 11 12 13 14
'=' (61) 17 18
error (256)
BGN (258) 1
END (259) 1
CREATE (260)
LOAD (261)
DROP (262)
IDENTIFIER (263) 8 9 10 17 18 19 20 21 22 23 25 26 27
INTEGER (264) 25 28
HADAMARD (265) 20
KRAO (266) 22
KRON (267) 21
TR (268) 23
VECTOR (269) 8
MATRIX (270) 9
BITMAP (271) 10
BANG (272) 28
TBL_READ (273) 25
MX_FILTER_AND (274) 27
TBL_WRITE (275) 26
CONDITION (276) 27
KEY_CONDITION (277) 27
START (278) 15
STOP (279) 16


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
initial_expression (32)
    on left: 1, on right: 0
body (33)
    on left: 2 3, on right: 1 2
elem (34)
    on left: 4 5 6 7, on right: 2 3
Inline_declaration_type (35)
    on left: 8 9 10, on right: 4
query (36)
    on left: 11 12 13 14, on right: 5 11 12
time (37)
    on left: 15 16, on right: 5
atribuition_function (38)
    on left: 17, on right: 6 11 13
atribuition_expression (39)
    on left: 18, on right: 12 14
expression (40)
    on left: 19 20 21 22 23 24, on right: 18 24
function (41)
    on left: 25 26 27 28, on right: 7 17


state 0

    0 $accept: . initial_expression $end

    BGN  shift, and go to state 1

    initial_expression  go to state 2


state 1

    1 initial_expression: BGN . body END

    IDENTIFIER     shift, and go to state 3
    VECTOR         shift, and go to state 4
    MATRIX         shift, and go to state 5
    BITMAP         shift, and go to state 6
    BANG           shift, and go to state 7
    TBL_READ       shift, and go to state 8
    MX_FILTER_AND  shift, and go to state 9
    TBL_WRITE      shift, and go to state 10
    START          shift, and go to state 11
    STOP           shift, and go to state 12

    body                     go to state 13
    elem                     go to state 14
    Inline_declaration_type  go to state 15
    time                     go to state 16
    atribuition_function     go to state 17
    function                 go to state 18


state 2

    0 $accept: initial_expression . $end

    $end  shift, and go to state 19


state 3

   17 atribuition_function: IDENTIFIER . '=' function

    '='  shift, and go to state 20


state 4

    8 Inline_declaration_type: VECTOR . IDENTIFIER

    IDENTIFIER  shift, and go to state 21


state 5

    9 Inline_declaration_type: MATRIX . IDENTIFIER

    IDENTIFIER  shift, and go to state 22


state 6

   10 Inline_declaration_type: BITMAP . IDENTIFIER

    IDENTIFIER  shift, and go to state 23


state 7

   28 function: BANG . '(' INTEGER ')'

    '('  shift, and go to state 24


state 8

   25 function: TBL_READ . '(' IDENTIFIER ',' INTEGER ')'

    '('  shift, and go to state 25


state 9

   27 function: MX_FILTER_AND . '(' IDENTIFIER ',' CONDITION ',' KEY_CONDITION ',' CONDITION ',' KEY_CONDITION ')'

    '('  shift, and go to state 26


state 10

   26 function: TBL_WRITE . '(' IDENTIFIER ',' IDENTIFIER ')'

    '('  shift, and go to state 27


state 11

   15 time: START .

    $default  reduce using rule 15 (time)


state 12

   16 time: STOP .

    $default  reduce using rule 16 (time)


state 13

    1 initial_expression: BGN body . END
    2 body: body . elem

    END            shift, and go to state 28
    IDENTIFIER     shift, and go to state 3
    VECTOR         shift, and go to state 4
    MATRIX         shift, and go to state 5
    BITMAP         shift, and go to state 6
    BANG           shift, and go to state 7
    TBL_READ       shift, and go to state 8
    MX_FILTER_AND  shift, and go to state 9
    TBL_WRITE      shift, and go to state 10
    START          shift, and go to state 11
    STOP           shift, and go to state 12

    elem                     go to state 29
    Inline_declaration_type  go to state 15
    time                     go to state 16
    atribuition_function     go to state 17
    function                 go to state 18


state 14

    3 body: elem .

    $default  reduce using rule 3 (body)


state 15

    4 elem: Inline_declaration_type . ';'

    ';'  shift, and go to state 30


state 16

    5 elem: time . query time

    IDENTIFIER  shift, and go to state 31

    query                   go to state 32
    atribuition_function    go to state 33
    atribuition_expression  go to state 34


state 17

    6 elem: atribuition_function . ';'

    ';'  shift, and go to state 35


state 18

    7 elem: function . ';'

    ';'  shift, and go to state 36


state 19

    0 $accept: initial_expression $end .

    $default  accept


state 20

   17 atribuition_function: IDENTIFIER '=' . function

    BANG           shift, and go to state 7
    TBL_READ       shift, and go to state 8
    MX_FILTER_AND  shift, and go to state 9
    TBL_WRITE      shift, and go to state 10

    function  go to state 37


state 21

    8 Inline_declaration_type: VECTOR IDENTIFIER .

    $default  reduce using rule 8 (Inline_declaration_type)


state 22

    9 Inline_declaration_type: MATRIX IDENTIFIER .

    $default  reduce using rule 9 (Inline_declaration_type)


state 23

   10 Inline_declaration_type: BITMAP IDENTIFIER .

    $default  reduce using rule 10 (Inline_declaration_type)


state 24

   28 function: BANG '(' . INTEGER ')'

    INTEGER  shift, and go to state 38


state 25

   25 function: TBL_READ '(' . IDENTIFIER ',' INTEGER ')'

    IDENTIFIER  shift, and go to state 39


state 26

   27 function: MX_FILTER_AND '(' . IDENTIFIER ',' CONDITION ',' KEY_CONDITION ',' CONDITION ',' KEY_CONDITION ')'

    IDENTIFIER  shift, and go to state 40


state 27

   26 function: TBL_WRITE '(' . IDENTIFIER ',' IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 41


state 28

    1 initial_expression: BGN body END .

    $default  reduce using rule 1 (initial_expression)


state 29

    2 body: body elem .

    $default  reduce using rule 2 (body)


state 30

    4 elem: Inline_declaration_type ';' .

    $default  reduce using rule 4 (elem)


state 31

   17 atribuition_function: IDENTIFIER . '=' function
   18 atribuition_expression: IDENTIFIER . '=' expression

    '='  shift, and go to state 42


state 32

    5 elem: time query . time
   11 query: query . atribuition_function ';'
   12      | query . atribuition_expression ';'

    IDENTIFIER  shift, and go to state 31
    START       shift, and go to state 11
    STOP        shift, and go to state 12

    time                    go to state 43
    atribuition_function    go to state 44
    atribuition_expression  go to state 45


state 33

   13 query: atribuition_function . ';'

    ';'  shift, and go to state 46


state 34

   14 query: atribuition_expression . ';'

    ';'  shift, and go to state 47


state 35

    6 elem: atribuition_function ';' .

    $default  reduce using rule 6 (elem)


state 36

    7 elem: function ';' .

    $default  reduce using rule 7 (elem)


state 37

   17 atribuition_function: IDENTIFIER '=' function .

    $default  reduce using rule 17 (atribuition_function)


state 38

   28 function: BANG '(' INTEGER . ')'

    ')'  shift, and go to state 48


state 39

   25 function: TBL_READ '(' IDENTIFIER . ',' INTEGER ')'

    ','  shift, and go to state 49


state 40

   27 function: MX_FILTER_AND '(' IDENTIFIER . ',' CONDITION ',' KEY_CONDITION ',' CONDITION ',' KEY_CONDITION ')'

    ','  shift, and go to state 50


state 41

   26 function: TBL_WRITE '(' IDENTIFIER . ',' IDENTIFIER ')'

    ','  shift, and go to state 51


state 42

   17 atribuition_function: IDENTIFIER '=' . function
   18 atribuition_expression: IDENTIFIER '=' . expression

    IDENTIFIER     shift, and go to state 52
    BANG           shift, and go to state 7
    TBL_READ       shift, and go to state 8
    MX_FILTER_AND  shift, and go to state 9
    TBL_WRITE      shift, and go to state 10
    '('            shift, and go to state 53

    expression  go to state 54
    function    go to state 37


state 43

    5 elem: time query time .

    $default  reduce using rule 5 (elem)


state 44

   11 query: query atribuition_function . ';'

    ';'  shift, and go to state 55


state 45

   12 query: query atribuition_expression . ';'

    ';'  shift, and go to state 56


state 46

   13 query: atribuition_function ';' .

    $default  reduce using rule 13 (query)


state 47

   14 query: atribuition_expression ';' .

    $default  reduce using rule 14 (query)


state 48

   28 function: BANG '(' INTEGER ')' .

    $default  reduce using rule 28 (function)


state 49

   25 function: TBL_READ '(' IDENTIFIER ',' . INTEGER ')'

    INTEGER  shift, and go to state 57


state 50

   27 function: MX_FILTER_AND '(' IDENTIFIER ',' . CONDITION ',' KEY_CONDITION ',' CONDITION ',' KEY_CONDITION ')'

    CONDITION  shift, and go to state 58


state 51

   26 function: TBL_WRITE '(' IDENTIFIER ',' . IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 59


state 52

   19 expression: IDENTIFIER . '*' IDENTIFIER
   20           | IDENTIFIER . HADAMARD IDENTIFIER
   21           | IDENTIFIER . KRON IDENTIFIER
   22           | IDENTIFIER . KRAO IDENTIFIER
   23           | IDENTIFIER . TR

    HADAMARD  shift, and go to state 60
    KRAO      shift, and go to state 61
    KRON      shift, and go to state 62
    TR        shift, and go to state 63
    '*'       shift, and go to state 64


state 53

   24 expression: '(' . expression ')'

    IDENTIFIER  shift, and go to state 52
    '('         shift, and go to state 53

    expression  go to state 65


state 54

   18 atribuition_expression: IDENTIFIER '=' expression .

    $default  reduce using rule 18 (atribuition_expression)


state 55

   11 query: query atribuition_function ';' .

    $default  reduce using rule 11 (query)


state 56

   12 query: query atribuition_expression ';' .

    $default  reduce using rule 12 (query)


state 57

   25 function: TBL_READ '(' IDENTIFIER ',' INTEGER . ')'

    ')'  shift, and go to state 66


state 58

   27 function: MX_FILTER_AND '(' IDENTIFIER ',' CONDITION . ',' KEY_CONDITION ',' CONDITION ',' KEY_CONDITION ')'

    ','  shift, and go to state 67


state 59

   26 function: TBL_WRITE '(' IDENTIFIER ',' IDENTIFIER . ')'

    ')'  shift, and go to state 68


state 60

   20 expression: IDENTIFIER HADAMARD . IDENTIFIER

    IDENTIFIER  shift, and go to state 69


state 61

   22 expression: IDENTIFIER KRAO . IDENTIFIER

    IDENTIFIER  shift, and go to state 70


state 62

   21 expression: IDENTIFIER KRON . IDENTIFIER

    IDENTIFIER  shift, and go to state 71


state 63

   23 expression: IDENTIFIER TR .

    $default  reduce using rule 23 (expression)


state 64

   19 expression: IDENTIFIER '*' . IDENTIFIER

    IDENTIFIER  shift, and go to state 72


state 65

   24 expression: '(' expression . ')'

    ')'  shift, and go to state 73


state 66

   25 function: TBL_READ '(' IDENTIFIER ',' INTEGER ')' .

    $default  reduce using rule 25 (function)


state 67

   27 function: MX_FILTER_AND '(' IDENTIFIER ',' CONDITION ',' . KEY_CONDITION ',' CONDITION ',' KEY_CONDITION ')'

    KEY_CONDITION  shift, and go to state 74


state 68

   26 function: TBL_WRITE '(' IDENTIFIER ',' IDENTIFIER ')' .

    $default  reduce using rule 26 (function)


state 69

   20 expression: IDENTIFIER HADAMARD IDENTIFIER .

    $default  reduce using rule 20 (expression)


state 70

   22 expression: IDENTIFIER KRAO IDENTIFIER .

    $default  reduce using rule 22 (expression)


state 71

   21 expression: IDENTIFIER KRON IDENTIFIER .

    $default  reduce using rule 21 (expression)


state 72

   19 expression: IDENTIFIER '*' IDENTIFIER .

    $default  reduce using rule 19 (expression)


state 73

   24 expression: '(' expression ')' .

    $default  reduce using rule 24 (expression)


state 74

   27 function: MX_FILTER_AND '(' IDENTIFIER ',' CONDITION ',' KEY_CONDITION . ',' CONDITION ',' KEY_CONDITION ')'

    ','  shift, and go to state 75


state 75

   27 function: MX_FILTER_AND '(' IDENTIFIER ',' CONDITION ',' KEY_CONDITION ',' . CONDITION ',' KEY_CONDITION ')'

    CONDITION  shift, and go to state 76


state 76

   27 function: MX_FILTER_AND '(' IDENTIFIER ',' CONDITION ',' KEY_CONDITION ',' CONDITION . ',' KEY_CONDITION ')'

    ','  shift, and go to state 77


state 77

   27 function: MX_FILTER_AND '(' IDENTIFIER ',' CONDITION ',' KEY_CONDITION ',' CONDITION ',' . KEY_CONDITION ')'

    KEY_CONDITION  shift, and go to state 78


state 78

   27 function: MX_FILTER_AND '(' IDENTIFIER ',' CONDITION ',' KEY_CONDITION ',' CONDITION ',' KEY_CONDITION . ')'

    ')'  shift, and go to state 79


state 79

   27 function: MX_FILTER_AND '(' IDENTIFIER ',' CONDITION ',' KEY_CONDITION ',' CONDITION ',' KEY_CONDITION ')' .

    $default  reduce using rule 27 (function)
